cli/tests/snapshot/snapshots/snapshot__error_stderr_destructuring_rest_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: missing field `a`
  ┌─ [INPUTS_PATH]/errors/destructuring_rest_fail.ncl:4:1
  │
4 │ y.a
  │ ^^^ this requires the field `a` to exist


